@@ -18,35 +18,25 @@
  ****************************************************************/
 package org.apache.cayenne.reflect;
 
-import java.lang.annotation.Annotation;
-import java.lang.reflect.Method;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Set;
-import java.util.concurrent.ConcurrentHashMap;
-
 import org.apache.cayenne.CayenneRuntimeException;
 import org.apache.cayenne.LifecycleListener;
 import org.apache.cayenne.Persistent;
-import org.apache.cayenne.annotation.PostAdd;
-import org.apache.cayenne.annotation.PostLoad;
-import org.apache.cayenne.annotation.PostPersist;
-import org.apache.cayenne.annotation.PostRemove;
-import org.apache.cayenne.annotation.PostUpdate;
-import org.apache.cayenne.annotation.PrePersist;
-import org.apache.cayenne.annotation.PreRemove;
-import org.apache.cayenne.annotation.PreUpdate;
+import org.apache.cayenne.annotation.*;
 import org.apache.cayenne.map.EntityResolver;
 import org.apache.cayenne.map.LifecycleEvent;
 import org.apache.cayenne.map.ObjEntity;
 import org.apache.cayenne.util.Util;
 
+import java.lang.annotation.Annotation;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+
 /**
  * A registry of lifecycle callbacks for all callback event types. Valid event
  * types are defined in {@link LifecycleEvent} enum.
- * 
+ *
  * @since 3.0
  */
 public class LifecycleCallbackRegistry {
@@ -55,6 +45,7 @@ public class LifecycleCallbackRegistry {
     private LifecycleCallbackEventHandler[] eventCallbacks;
     private Map<String, AnnotationReader> annotationsMap;
     private Map<String, Collection<Class<?>>> entitiesByAnnotation;
+    private Map<Class<?>, Boolean> processedEntityClasses;
 
     /**
      * Creates an empty callback registry.
@@ -73,6 +64,11 @@ public class LifecycleCallbackRegistry {
 
         // other "static" lookup maps are initialized on-demand
         this.entitiesByAnnotation = new ConcurrentHashMap<String, Collection<Class<?>>>();
+        this.processedEntityClasses = new ConcurrentHashMap<Class<?>, Boolean>();
+
+        // prepopulating the map so that class hierarchy traversal could
+        // terminate when it reaches Object.
+        processedEntityClasses.put(Object.class, true);
     }
 
     /**
@@ -168,6 +164,48 @@ public class LifecycleCallbackRegistry {
     }
 
     /**
+     * Registers annotated methods of the entity class as callbacks for entity
+     * events.
+     *
+     * @since 3.2
+     */
+    public void addCallbacks(Class<?> entityClass) {
+        if (entityClass == null) {
+            throw new NullPointerException("Null entity class");
+        }
+
+        // Only process Persistent Objects
+        if (!Persistent.class.isAssignableFrom(entityClass)) {
+            throw new CayenneRuntimeException("Class not assignable from Entity");
+        }
+
+        while (entityClass != null && processedEntityClasses.put(entityClass, true) == null) {
+            for (Method m : entityClass.getDeclaredMethods()) {
+                for (Annotation a : m.getAnnotations()) {
+                    AnnotationReader reader = this.getAnnotationsMap().get(a.annotationType().getName());
+                    if (reader != null) {
+
+                        // Only register lifecycle annotations used as markers
+                        // (both entities and entityAnnotations must be empty)
+                        if (reader.entities(a).length > 0) {
+                            throw new CayenneRuntimeException(
+                                    "Entity listener annotation should not contain 'entities': " + m.getName());
+                        }
+
+                        if (reader.entityAnnotations(a).length > 0) {
+                            throw new CayenneRuntimeException(
+                                    "Entity listener annotation should not contain 'entityAnnotations': " + m.getName());
+                        }
+
+                        this.eventCallbacks[reader.eventType().ordinal()].addListener(entityClass, m.getName());
+                    }
+                }
+            }
+            entityClass = entityClass.getSuperclass();
+        }
+    }
+
+    /**
      * Adds a listener, mapping its methods to events based on annotations.
      * 
      * @since 3.1
@@ -192,11 +230,22 @@ public class LifecycleCallbackRegistry {
                         Class<? extends Annotation>[] entityAnnotations = reader.entityAnnotations(a);
 
                         for (Class<?> type : entities) {
-                            // TODO: ignoring entity subclasses? whenever we add
-                            // those,
-                            // take
-                            // into account "exlcudeSuperclassListeners" flag
-                            types.add(type);
+                            // TODO: ignoring entity subclasses? whenever we add those,
+                            // take into account "excludeSuperclassListeners" flag
+
+                            // If type is an interface register all entities that implement it
+                            if (type.isInterface()) {
+                                for (ObjEntity entity : this.entityResolver.getObjEntities()) {
+                                    if (type.isAssignableFrom(entity.getJavaClass()) && !entity.isAbstract()) {
+                                        types.add(entity.getJavaClass());
+                                    }
+                                }
+                            } else {
+                                if (!Modifier.isAbstract(type.getModifiers())) {
+                                    types.add(type);
+                                }
+                            }
+
                         }
 
                         for (Class<? extends Annotation> type : entityAnnotations) {
