@@ -14,6 +14,7 @@ Date:
 ----------------------------------
 Changes/New Features:
 
+CAY-1559 Use Lifecycle Annotations as markers on PersistentObject methods
 CAY-1267 Some changes to LogDialog
 CAY-1980 'mvn cayenne-modeler:run' seems to be broken in 4.0
 CAY-1984 cdbimport doesn't flatten many to many relationships
